kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/ConflictingProjectionKind.kt
package test

public open class ConflictingProjectionKind {
    public open fun foo(p0: List<Number>?) {
        throw UnsupportedOperationException()
    }
}
